--- a/main/LewaSystemClean.apk/res/values-cs/strings.xml
+++ b/main/LewaSystemClean.apk/res/values-cs/strings.xml
@@ -1,85 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="app_name">Čištění systému</string>
-<string name="menu_settings">Nastavení</string>
-<string name="title_activity_main">Hlavní</string>
-<string name="calculate_sdcard">Výpočet místa na SD</string>
-<string name="clean_sdcard">Smazat SD kartu</string>
-<string name="clean_sdcard_completed">Smazání SD karty dokončeno</string>
-<string name="clean_log_file_name">Log soubory</string>
-<string name="clean_app_sdcard_cache_name">Cache soubory aplikací na SD kartě</string>
-<string name="clean_sdcard_cache_name">Cache soubory</string>
-<string name="clean_sdcard_empty_file_name">Prázdné soubory</string>
-<string name="clean_sdcard_mtk_log_name">MTK logy</string>
-<string name="clean_sdcard_thum_file_name">Náhled souboru</string>
-<string name="app_install_location_title">Preferované umístění pro instalaci</string>
-<string name="default_memory_title">Standardní paměť</string>
-<string name="format_storage_title">Formátovat</string>
-<string name="install_location_device">Systémový prostor</string>
-<string name="install_location_sd">%1$s (Nepodporují některé aplikace)</string>
-<string name="install_location_auto">Automaticky vybere systém</string>
-<string name="clear_data_title">Odstranit smetí</string>
-<string name="space_available">dostupný prostor</string>
-<string name="category_application">aplikace</string>
-<string name="category_others">ostatní</string>
-<string name="autostarts_title">Automaticky spouštěné aplikace</string>
-<string name="autostarts_allowed">Umožněno</string>
-<string name="autostarts_prohibited">Neumožněno</string>
-<string name="autostarts_optimized_list">%d aplikací spouštěných po startu povoleno</string>
-<string name="autostarts_prohibited_list">%d aplikací spouštěných po startu zakázáno</string>
-<string name="autostarts_empty_msg">Žádná aplikace k nastavení</string>
-<string name="autostarts_optimize_empty_msg">Žádná aplikace k optimalizaci</string>
-<string name="autostarts_optimize_btn_title">Optimalizovat aplikace spouštěné po startu</string>
-<string name="autostarts_startup_boot_des">Během uvádění do provozu</string>
-<string name="autostarts_startup_background_des">Po uvedení do provozu</string>
-<string name="notify_dialog_message">Je vyžadován restart pro nastavení změn. Restartovat hned?</string>
-<string name="sdcard_storage_title">SD karta</string>
-<string name="usb_storage_title">Vnitřní úložiště</string>
-<string name="internal_storage_title">Systémové místo</string>
-<string name="sdcardclean_title">Vyčištění SD karty</string>
-<string name="usbclean_title">Vyčištění interní paměti</string>
-<string name="internalclean_title">Vyčištění systémového místa</string>
-<string name="memory_others">Ostatní</string>
-<string name="calculate_size">Výpočet místa...</string>
-<string name="clean_size">Čistím...</string>
-<string name="calculate_size_result">K vyčištění máte zvoleno aplikací: %s</string>
-<string name="clean_all_storage">Vyčistit vše</string>
-<string name="clean_add_msg">Čištění</string>
-<string name="clean_add_title">Čištění</string>
-<string name="clean_remain_summary">Zbývá vyčistit</string>
-<string name="clean_calculate_empty_msg">Nenalezeny žádné soubory po čištění</string>
-<string name="clean_app_cache_summary">Cache:</string>
-<string name="clean_clear_complete_title">Čištění je hotové</string>
-<string name="clean_clear_complete_summary2">prostor</string>
-<string name="clean_calculate_size_title">Aktuální volné místo</string>
-<string name="size_used">Využito</string>
-<string name="size_available">Dostupné</string>
-<string name="calculate_size_complete">Celkem nalezeno prostoru k vyčištění:</string>
-<string name="calculate_size_stop">Výpočet byl přerušen</string>
-<string name="calculate_size_stop_result">Zjištěno %s volného místa</string>
-<string name="calculate_size_error">Promiňte, špatná velikost</string>
-<string name="clean_size_not_complete">Čištění nebylo dokončeno, prosím zkuste to později</string>
-<string name="clean_size_complete">Vyčištění je hotové!</string>
-<string name="clean_size_result">Celkem uvolněno prostoru: %s.</string>
-<string name="clean_data_dropbox_folder_name">Soubory systémové cache</string>
-<string name="clean_data_clipboard_data_name">Data schránky</string>
-<string name="clean_btn_caculate_stop_summary">Zastavit vypočítávání</string>
-<string name="clean_btn_cleanup_all_summary">Vyčistit vše</string>
-<string name="clean_btn_cleanup_stop_summary">Zastavit čištění</string>
-<string name="clean_btn_caculate_continue_summary">Pokračovat ve vypočítávání</string>
-<string name="clean_btn_cleanup_again_summary">Vyčistit znovu</string>
-<string name="clean_btn_return_summary">Návrat</string>
-<string name="clean_btn_confirm_summary">Potvrdit</string>
-<string name="clean_btn_complete_summary">Hotovo</string>
-<string name="clean_empty_folder_summary">Počítadlo složek</string>
-<string name="clean_storage_available_size">%s volného místa</string>
-<string name="clean_list_top_not_clean_summary">Soubory nebyly vyčištěny</string>
-<string name="clean_data_cleaning_summary">Čistím...</string>
-<string name="clean_btn_cleanup_part_summary">Čištění</string>
-<string name="clean_clipboard_data_summary">Data schránky:</string>
-<string name="clean_picture_thumbnail_summary">Náhledy obrázků:</string>
-<string name="clean_log_summary">Log:</string>
-<string name="clean_system_cache_file">Systémová cache</string>
-<string name="clean_calculate_complete_result">%1$s volného místa. Po čištění se očekává %2$s</string>
-<string name="storage_install_app_sdcard_summary">(Nepodporují některé aplikace)</string>
+    <string name="app_name">Čištění úložiště</string>
+    <string name="menu_settings">Nastavení</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="calculate_sdcard">Výpočet Sdcard</string>
+    <string name="clean_sdcard">Čištění sdcard</string>
+    <string name="clean_sdcard_completed">Čištění sdcard dokončeno</string>
+    <string name="clean_log_file_name">Soubory protokolů</string>
+    <string name="clean_app_sdcard_cache_name">App sdcard mezipaměti</string>
+    <string name="clean_sdcard_cache_name">Soubory v mezipaměti</string>
+    <string name="clean_sdcard_empty_file_name">Prázdné soubory</string>
+    <string name="clean_sdcard_mtk_log_name">MTK protokoly</string>
+    <string name="clean_sdcard_thum_file_name">Náhled souboru</string>
+    <string name="app_install_location_title">Umístění upřednostňované instalace</string>
+    <string name="default_memory_title">Výchozí paměť</string>
+    <string name="format_storage_title">Formát</string>
+    <string name="install_location_device">Systém prostor</string>
+    <string name="install_location_sd">%1$s (některé aplikace nepodporují)</string>
+    <string name="install_location_auto">Nechat systém rozhodnout</string>
+    <string name="clear_data_title">Vymazat odpadky</string>
+    <string name="space_available">dostupné místo</string>
+    <string name="space_used">využité místo</string>
+    <string name="category_application">aplikace</string>
+    <string name="category_others">ostatní</string>
+    <string name="autostarts_title">Při spuštění aplikace</string>
+    <string name="autostarts_allowed">Má povoleno</string>
+    <string name="autostarts_prohibited">Zakázala</string>
+    <string name="autostarts_optimized_list">%d při spuštění aplikace povoleno</string>
+    <string name="autostarts_prohibited_list">%d při spuštění aplikace zakázáno</string>
+    <string name="autostarts_empty_msg">Žádná instalace při spuštění aplikace</string>
+    <string name="autostarts_optimize_empty_msg">Ne optimalizaci aplikací při spouštění</string>
+    <string name="autostarts_optimize_btn_title">Optimalizace aplikací při spouštění</string>
+    <string name="autostarts_startup_boot_des">Během spuštění</string>
+    <string name="autostarts_startup_background_des">Po spuštění</string>
+    <string name="notify_dialog_message">Pro změnu je nutné provést restartování. Chcete restartovat?</string>
+    <string name="sdcard_storage_title">SDCard</string>
+    <string name="usb_storage_title">Vnitřní paměť</string>
+    <string name="internal_storage_title">Systémový prostor</string>
+    <string name="sdcardclean_title">SDcard čistá</string>
+    <string name="usbclean_title">Vnitřní paměť čistá</string>
+    <string name="internalclean_title">Systémové místo čisté</string>
+    <string name="memory_others">Ostatní</string>
+    <string name="calculate_size">Výpočet místa k vyčištění...</string>
+    <string name="clean_size">Vyčištění místa...</string>
+    <string name="calculate_size_result">Počet vybraných položek vyčištění %s</string>
+    <string name="calculate_size_unchecked">Stále %s položek k vyčištění</string>
+    <string name="clean_all_storage">Vše čisté</string>
+    <string name="clean_add_msg">vyčistit</string>
+    <string name="clean_add_title"> vyčistit</string>
+    <string name="clean_remain_summary">Zůstává k čištění:</string>
+    <string name="clean_calculate_empty_msg">Nelze nalézt soubory k vyčištění</string>
+    <string name="clean_app_cache_summary">Mezipaměť:</string>
+    <string name="clean_clear_complete_title">Čištění dokončeno</string>
+    <string name="clean_clear_complete_summary2">prostor</string>
+    <string name="clean_calculate_size_title">V současné době dostupné místo</string>
+    <string name="size_used">Použité</string>
+    <string name="size_available">K dispozici</string>
+    <string name="calculate_size_complete">Nalezeno prostoru k vyčištění</string>
+    <string name="calculate_size_incomplete">Stále zůstává k vyčištění</string>
+    <string name="calculate_size_stop">Výpočet je ukončen</string>
+    <string name="calculate_size_stop_result">Program zjistil místo: %s</string>
+    <string name="calculate_size_error">Promiňte, to je špatně!</string>
+    <string name="clean_size_not_complete">Vyčištění není kompletní, opakujte akci později</string>
+    <string name="clean_size_complete">Čištění je dokončeno!</string>
+    <string name="clean_size_stop">Vyčištění je zastaveno</string>
+    <string name="clean_size_result">Uvolnění celkem místa na %s</string>
+    <string name="clean_data_dropbox_folder_name">Systémové mezipaměti souborů</string>
+    <string name="clean_data_clipboard_data_name">Data ve schránce</string>
+    <string name="clean_btn_caculate_stop_summary">Zastavit výpočet</string>
+    <string name="clean_btn_cleanup_all_summary">Vyčištění všech</string>
+    <string name="clean_btn_cleanup_stop_summary">Zastavit vyčištění</string>
+    <string name="clean_btn_caculate_continue_summary">Pokračovat ve výpočtu</string>
+    <string name="clean_btn_cleanup_again_summary">Vyčištění znovu</string>
+    <string name="clean_btn_cleanup_continue">Pokračovat v čištění]</string>
+    <string name="clean_btn_return_summary">Návrat</string>
+    <string name="clean_btn_confirm_summary">Potvrdit</string>
+    <string name="clean_btn_complete_summary">Dokončit</string>
+    <string name="clean_empty_folder_summary">Počet složek:</string>
+    <string name="clean_storage_available_size">%s aktuální volné místo</string>
+    <string name="clean_list_top_not_clean_summary">Soubory nevyčištěny</string>
+    <string name="clean_data_cleaning_summary">Čištění...</string>
+    <string name="clean_btn_cleanup_part_summary">Vyčištění</string>
+    <string name="clean_btn_cleanup_incompelte">Pokračovat v čištění</string>
+    <string name="clean_btn_cleanup_incompelte_ignore">Konec vyčištění</string>
+    <string name="clean_clipboard_data_summary">Datové schránky:</string>
+    <string name="clean_picture_thumbnail_summary">Obrázek miniatury:</string>
+    <string name="clean_log_summary">Protokol:</string>
+    <string name="clean_system_cache_file">Mezipaměť systému:</string>
+    <string name="clean_calculate_complete_result">%1$s volné místo po vyčištění se očekává %2$s</string>
+    <string name="storage_install_app_sdcard_summary">(Některé aplikace nepodporují)</string>
 </resources>
