--- a/main/LewaThemeChooser.apk/res/values-cs/strings.xml
+++ b/main/LewaThemeChooser.apk/res/values-cs/strings.xml
@@ -1,123 +1,125 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Decompiled by BART-R (BurgerZ <az.burgerz@gmail.com)>--><resources>
-<string name="configure_wallpaper">Nastavení</string>
-<string name="wallpaper_instructions">Nastavit pozadí</string>
-<string name="live_wallpaper_loading">Načítám živé pozadí...</string>
-<string name="system_live_wallpaper">Systémové živé pozadí nemůže být odstraněno</string>
-<string name="live_wallpaper_delete_title">Smazat živé pozadí</string>
-<string name="live_wallpaper_delete">Opravdu chcete smazat živé pozadí</string>
-<string name="theme_local">Lokální</string>
-<string name="theme_online">Z internetu</string>
-<string name="theme_customize">Vlastní</string>
-<string name="theme_loading">Nahrávám...</string>
-<string name="app_name">Nastavení motivů</string>
-<string name="app_title">Motivy</string>
-<string name="apply">Aplikovat</string>
-<string name="delete">Odstranit</string>
-<string name="theme_change_dialog_title">Aplikuji...</string>
-<string name="theme_change_dialog_title_success">Úspěšně aplikováno!</string>
-<string name="switching_to_theme">Aplikuji motiv %s...</string>
-<string name="switching_to_wallpaper">Aplikuji wallpaper %s…</string>
-<string name="theme_delete">Jste si jistí odstraněním motivu?</string>
-<string name="theme_delete_title">Odstranit motiv</string>
-<string name="theme_delete_success">Motiv úspěšně odstraněn!</string>
-<string name="theme_err_msg_network">Chyba internetu</string>
-<string name="theme_network_setting">Nastavení sítě</string>
-<string name="theme_refresh">Zkusit znovu</string>
-<string name="theme_sd_nospace_title">na SD kartě není místo</string>
-<string name="theme_sd_nospace_msg">Je nám líto! Na SD kartě není místo!</string>
-<string name="theme_sd_clear">Vyčistit</string>
-<string name="theme_sd_not_avaliable">Prosím vložte SD kartu a opakujte</string>
-<string name="theme_back">Zpět</string>
-<string name="theme_network_error_title">Chyba síťového připojení</string>
-<string name="theme_network_error_msg">Ke stažení motivu potřebujete připojení sítě, prosím spusťte WiFi</string>
-<string name="theme_network_set">Nastavit</string>
-<string name="theme_network_remind_title">Návrh sítě</string>
-<string name="theme_network_remind_msg">"Vaše WiFi není spuštěna, doporučujeme ji spustit"</string>
-<string name="theme_ignore">Ignorovat</string>
-<string name="download_or_unzip_fail">Stahování selhalo</string>
-<string name="percent">%s%%</string>
-<string name="download_success">Stahování dokončeno</string>
-<string name="theme_model_wallpaper">Tapeta</string>
-<string name="theme_model_lockwallpaper">LockScreenWallPaper</string>
-<string name="theme_online_end_view">"Pokud se vám nelíbí tento, zkuste vlastní motiv"</string>
-<string name="theme_local_end_view">Konec! Zkuste motivy z internetu</string>
-<string name="theme_no_data">Žádná data</string>
-<string name="delete_system_theme">"Základní motiv nelze smazat"</string>
-<string name="delete_using_theme">"Používaný motiv nelze smazat"</string>
-<string name="lockscreen_wallpaper">Pozadí zámku obrazovky</string>
-<string name="lockscreen_style">Styl zámku obrazovky</string>
-<string name="custom_icon">Ikony</string>
-<string name="desktop_wallpaper">Pozadí plochy</string>
-<string name="system_app">Celkový styl</string>
-<string name="custom_font">Písmo</string>
-<string name="no_sdcard">Vložte SD kartu a zkuste to znovu</string>
-<string name="can_not_find_app">Nelze nalézt aplikaci!</string>
-<string name="import_other_app">Importovat z jiných aplikací</string>
-<string name="theme_count">Tento motiv obsahuje modulů: %s</string>
-<string name="theme_details">Detaily motivu</string>
-<string name="no_modules_to_apply">Žádné použitelné moduly</string>
-<string name="theme_lockscreen_local">Lokální</string>
-<string name="theme_lockscreen_online">Z internetu</string>
-<string name="theme_wallpaper_local">Lokální</string>
-<string name="theme_wallpaper_online">Z internetu</string>
-<string name="theme_lockscreen_wallpaper_local">Lokální</string>
-<string name="theme_lockscreen_wallpaper_online">Z internetu</string>
-<string name="theme_icons_local">Lokální</string>
-<string name="theme_icons_online">Z internetu</string>
-<string name="theme_system_app_local">Lokální</string>
-<string name="theme_system_app_online">Z internetu</string>
-<string name="theme_font_local">Lokální</string>
-<string name="theme_font_online">Z internetu</string>
-<string name="live_wallpaper_local">Lokální</string>
-<string name="live_wallpaper_online">Z internetu</string>
-<string name="theme_info_detail">Původ</string>
-<string name="sdcardfull">SD karta je plná, nelze nahrát náhled</string>
-<string name="sdcard_removed">SD karta není přítomna, nelze nahrát náhled</string>
-<string name="init_install_theme">Nastavuji motiv, čekejte</string>
-<string name="theme_author">Autor:</string>
-<string name="theme_size">Velikost:</string>
-<string name="theme_version">Verze:</string>
-<string name="theme_date">Datum:</string>
-<string name="theme_download_count">"Staženo: "</string>
-<string name="theme_name">Název motivu:</string>
-<string name="theme_download">Stáhnout</string>
-<string name="network_closed">Síť je omezena!</string>
-<string name="set_network">Nastavení práv sítě</string>
-<string name="desk_wallpaper_change">Pozadí plochy</string>
-<string name="lockscreen_wallpaper_change">Pozadí zámku obrazovky</string>
-<string name="dynamic_wallpaper_change">Živá pozadí</string>
-<string name="icon_change">Ikony</string>
-<string name="font_change">Písmo</string>
-<string name="lockscreen_change">Zámek obrazovky</string>
-<string name="systemapp_change">Celkový styl</string>
-<string name="some_live_wallpaper">Masivní HD pozadí</string>
-<string name="live_wallpaper">Živá pozadí</string>
-<string name="theme_not_exist">Síť je zaneprázdněna, prosím přeskenujte</string>
-<string name="data_no_size">data jsou malá, použití písma selhalo!</string>
-<string name="onekey_wallpaper">Rychlé pozadí</string>
-<string name="onekey_font">Rychlé písmo</string>
-<string name="onekey_theme">Rychlý motiv</string>
-<string name="onekey_wallpaper_downloading">Nové pozadí se stahuje</string>
-<string name="onekey_font_changing">Měním písmo...</string>
-<string name="onekey_theme_changing">Měním motiv...</string>
-<string name="font_change_reboot">Zvolený motiv obsahuje písma, aplikace se musí zrestartovat</string>
-<string name="apply_reboot">Použít a restartovat</string>
-<string name="wallpaper_selector">Centrum pozadí</string>
-<string name="wifi_off_no_wallpaper">Žádné pozadí nebylo staženo, prosím stáhněte nové pozadí pomocí ThemeChooseru</string>
-<string name="sdcard_unmounted_no_wallpaper">"Nelze přepnout pozadí, SD karta není přítomná nebo probíhá přenos dat"</string>
-<string name="deskwallpaper_delete">Opravdu chcete smazat pozadí plochy?</string>
-<string name="deskwallpaper_delete_title">Smazat pozadí plochy</string>
-<string name="lockwallpaper_delete">Opravdu chcete smazat pozadí zámku obrazovky?</string>
-<string name="lockwallpaper_delete_title">Smazat pozadí zámku obrazovky</string>
-<string name="theme_not_fit_phone">Tento motiv není pro váš telefon, prosím vyberte jiný nádherný motiv</string>
-<string name="deskwallpaper_delete_success">pozadí plochy úspěšně smazáno</string>
-<string name="lockwallpaper_delete_success">pozadí zámku obrazovky úspěšně smazáno</string>
-<string name="theme_loading_more">načítání...</string>
-<string name="theme_loading_more_fail">načítání selhalo</string>
-<string name="theme_loading_more_end">Konec!</string>
-<string name="modify_wallpaper">Tapeta</string>
-<string name="theme_name_default">Základní</string>
-<string name="style_appearance_name">lewadefault</string>
-<string name="author">Lewa OS</string>
+<resources>
+    <string name="configure_wallpaper">Nastavení</string>
+    <string name="wallpaper_instructions">Nastavit tapetu</string>
+    <string name="live_wallpaper_loading">Načítání živé tapety\u0085</string>
+    <string name="system_live_wallpaper">Živá tapeta systému nemůže být odstraněna</string>
+    <string name="live_wallpaper_delete_title">Odstranit živé tapety</string>
+    <string name="live_wallpaper_delete">Určitě odstranit živé tapety</string>
+    <string name="theme_local">Místní</string>
+    <string name="theme_online">Online</string>
+    <string name="theme_customize">Vlastní nastavení</string>
+    <string name="theme_loading">Načítání...</string>
+    <string name="app_name">Téma</string>
+    <string name="app_title">Téma</string>
+    <string name="apply">Použít</string>
+    <string name="delete">Odstranit</string>
+    <string name="theme_change_dialog_title">Použití...</string>
+    <string name="theme_change_dialog_title_success">Úspěšně použito!</string>
+    <string name="switching_to_theme">Použití motivu %s...</string>
+    <string name="switching_to_wallpaper">Použití tapety %s...</string>
+    <string name="theme_delete">Určitě odstranit téma?</string>
+    <string name="theme_delete_title">Odstranit téma</string>
+    <string name="theme_delete_success">Téma úspěšně odstraněno!</string>
+    <string name="theme_err_msg_network">Chyba připojení</string>
+    <string name="theme_network_setting">Nastavení sítě</string>
+    <string name="theme_refresh">Opakovat aktualizaci</string>
+    <string name="theme_sd_nospace_title">SD karta bez místa</string>
+    <string name="theme_sd_nospace_msg">Promiňte! Žádné místo na SD kartě!</string>
+    <string name="theme_sd_clear">Vyčistit</string>
+    <string name="theme_sd_not_avaliable">Prosím, vložte SD kartu a opakujte</string>
+    <string name="theme_back">Zpět</string>
+    <string name="theme_network_error_title">Chyba připojení sítě</string>
+    <string name="theme_network_error_msg">Pro stažení vzhledu je potřeba sít, otevřete prosím Wifi</string>
+    <string name="theme_network_set">Nastavit</string>
+    <string name="theme_network_remind_title">Návrh sítě</string>
+    <string name="theme_network_remind_msg">Vaše wifi neotevřena, doporučuji otevřít</string>
+    <string name="theme_ignore">Ignorovat</string>
+    <string name="download_or_unzip_fail">Stažení selhalo</string>
+    <string name="percent">%s%%</string>
+    <string name="download_success">Stažení úspěšné</string>
+    <string name="theme_model_wallpaper">Tapeta</string>
+    <string name="theme_model_lockwallpaper">Tapeta zámku</string>
+    <string name="theme_online_end_view">Pokud se vám to nelíbí, zkuste vlastní motiv</string>
+    <string name="theme_local_end_view">Konec! Přejít na online téma</string>
+    <string name="theme_no_data">Žádná data</string>
+    <string name="delete_system_theme">Motiv systému nelze odstranit.</string>
+    <string name="delete_using_theme">Motiv nelze odstranit</string>
+    <string name="lockscreen_wallpaper">Tapeta zámku</string>
+    <string name="lockscreen_style">Styl zámku</string>
+    <string name="custom_icon">Ikona</string>
+    <string name="desktop_wallpaper">Tapeta plochy</string>
+    <string name="system_app">Globální styl</string>
+    <string name="custom_font">Písmo</string>
+    <string name="no_sdcard">Prosím vložte SD kartu, pak zkuste znovu</string>
+    <string name="can_not_find_app">Nelze najít aplikaci!</string>
+    <string name="import_other_app">Importovat z jiné aplikace</string>
+    <string name="theme_count">Toto téma obsahuje %s moduly</string>
+    <string name="theme_details">Detaily motivu</string>
+    <string name="no_modules_to_apply">Žádné moduly použít</string>
+    <string name="theme_lockscreen_local">Místní</string>
+    <string name="theme_lockscreen_online">Online</string>
+    <string name="theme_wallpaper_local">Místní</string>
+    <string name="theme_wallpaper_online">Online</string>
+    <string name="theme_lockscreen_wallpaper_local">Místní</string>
+    <string name="theme_lockscreen_wallpaper_online">Online</string>
+    <string name="theme_icons_local">Místní</string>
+    <string name="theme_icons_online">Online</string>
+    <string name="theme_system_app_local">Místní</string>
+    <string name="theme_system_app_online">Online</string>
+    <string name="theme_font_local">Místní</string>
+    <string name="theme_font_online">Online</string>
+    <string name="live_wallpaper_local">Místní</string>
+    <string name="live_wallpaper_online">Online</string>
+    <string name="theme_info_detail">Podrobnosti zdroje</string>
+    <string name="sdcardfull">SD karta je plná, nelze načíst miniatury</string>
+    <string name="sdcard_removed">SD karta odstraněna, nemůže načíst miniatury</string>
+    <string name="init_install_theme">Inicializace téma, prosím počkejte dvě sekundy</string>
+    <string name="theme_author">Autor:</string>
+    <string name="theme_size">Velikost:</string>
+    <string name="theme_version">Verze:</string>
+    <string name="theme_date">Datum:</string>
+    <string name="theme_download_count">"Ke stažení: "</string>
+    <string name="theme_name">Jméno:</string>
+    <string name="theme_download">Stáhnout</string>
+    <string name="network_closed">Síť je limitována</string>
+    <string name="set_network">Nastavení síťových práv</string>
+    <string name="desk_wallpaper_change">Tapeta plochy</string>
+    <string name="lockscreen_wallpaper_change">Tapeta zámku</string>
+    <string name="dynamic_wallpaper_change">Živá tapeta</string>
+    <string name="icon_change">Ikona</string>
+    <string name="font_change">Písmo</string>
+    <string name="lockscreen_change">Zámek</string>
+    <string name="systemapp_change">Globální styl</string>
+    <string name="some_live_wallpaper">Masivní HD tapeta</string>
+    <string name="live_wallpaper">Živá tapeta</string>
+    <string name="theme_not_exist">Síť je zaneprázdněna, prosím, re-scan.</string>
+    <string name="data_no_size">Nedostatek dat, použití písma selhalo!</string>
+    <string name="onekey_wallpaper">Rychlá tapeta</string>
+    <string name="onekey_font">Rychlé písmo</string>
+    <string name="onekey_theme">Rychlé téma</string>
+    <string name="onekey_wallpaper_downloading">Stahování nové tapety</string>
+    <string name="onekey_font_changing">Změna písma...</string>
+    <string name="onekey_theme_changing">Změna motivu...</string>
+    <string name="onekey_font_no_font">Stáhněte alespoň dvě písma téma aplikace tak, aby se změnilo písmo</string>
+    <string name="onekey_font_no_theme">Stáhněte alespoň jeden motiv téma aplikace tak, aby se změnil motiv</string>
+    <string name="font_change_reboot">Zvolené téma obsahuje písma, aplikaci třeba restartovat</string>
+    <string name="apply_reboot">Aplikovat a obnovit</string>
+    <string name="wallpaper_selector">Centrum tapet</string>
+    <string name="wifi_off_no_wallpaper">Žádná tapeta nestažena, stáhněte si novou tapetu přes ThemeChooser</string>
+    <string name="sdcard_unmounted_no_wallpaper">Nelze přepnout tapety, SD karta je odebrána nebo přenáší data</string>
+    <string name="deskwallpaper_delete">Opravdu chcete odstranit deskwallpaper?</string>
+    <string name="deskwallpaper_delete_title">Odstranit deskwallpaper</string>
+    <string name="lockwallpaper_delete">Opravdu chcete odstranit lockwallpaper?</string>
+    <string name="lockwallpaper_delete_title">Odstranit lockwallpaper</string>
+    <string name="theme_not_fit_phone">Toto téma se nevejde na váš telefon, prosím vyberte znovu další nádherné téma</string>
+    <string name="deskwallpaper_delete_success">Odstranění tapety úspěšné</string>
+    <string name="lockwallpaper_delete_success">Odstranění tapety zámku úspěšné</string>
+    <string name="theme_loading_more">Načítání...</string>
+    <string name="theme_loading_more_fail">Načtení se nezdařilo.</string>
+    <string name="theme_loading_more_end">Konec!</string>
+    <string name="modify_wallpaper">Tapeta</string>
+    <string name="theme_name_default">Výchozí</string>
+    <string name="style_appearance_name">lewadefault</string>
+    <string name="author">Lewa OS</string>
 </resources>
